Allow historic unsubmitted organisation queries
